feat: add label support for create message API
